--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         { summonerName: 'EUW KZH SON ', name: 'Nom 2' },
         { summonerName: 'TOPLANER CEO', name: 'Nom 3' },
         { summonerName: 'TTV Potent213', name: 'Nom 4' },
-        { summonerName: 'miroin', name: 'Nom 4' }
+        { summonerName: 'AKOП', name: 'Nom 4' }
       ];
       var apiKey = 'RGAPI-1087c5ef-162e-41a0-b121-26e0e20992b5'; // Remplacez par votre clé d'API Riot Games
 
