--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
   <script>
     function getLeagueData() {
       var summonerData = [
-        { summonerName: 'tyssoxe', name: 'Nom 1' },
-        { summonerName: 'EUW KZH SON ', name: 'Nom 2' },
-        { summonerName: 'TOPLANER CEO', name: 'Nom 3' },
-        { summonerName: 'TTV Potent213', name: 'Nom 4' },
-        { summonerName: 'AKOП', name: 'Nom 4' }
+        { summonerName: 'BzeurDeKrug', name: 'Mathieeeeuuuuuuu' },
+        { summonerName: 'AKOП', name: 'Artiom' }
       ];
       var apiKey = 'RGAPI-1087c5ef-162e-41a0-b121-26e0e20992b5'; // Remplacez par votre clé d'API Riot Games
 
