--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
     function getLeagueData() {
       var summonerData = [
         { summonerName: 'BzeurDeKrug', name: 'Mathieeeeuuuuuuu' },
-        { summonerName: 'AKOП', name: 'Artiom' }
+        { summonerName: 'AKOП', name: 'Artiom' },
+        { summonerName: 'AKOП', name: 'Artiom' },
+        { summonerName: 'AKOП', name: 'Artiom' },
+        { summonerName: 'AKOП', name: 'Artiom' },
+        { summonerName: 'AKOП', name: 'Artiom' },
       ];
-      var apiKey = 'RGAPI-1087c5ef-162e-41a0-b121-26e0e20992b5'; // Remplacez par votre clé d'API Riot Games
+      var apiKey = 'RGAPI-fb928930-a311-4832-89c3-6f1d339254e7'; // Remplacez par votre clé d'API Riot Games
 
       var resultElement = document.getElementById('result');
       resultElement.innerHTML = ''; // Réinitialiser le contenu de la div résultat
