--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       var summonerData = [
         { summonerName: 'BzeurDeKrug', name: 'Mathieeeeuuuuuuu' },
         { summonerName: 'AKOП', name: 'Artiom' },
-        { summonerName: 'AKOП', name: 'Artiom' },
-        { summonerName: 'AKOП', name: 'Artiom' },
-        { summonerName: 'AKOП', name: 'Artiom' },
-        { summonerName: 'AKOП', name: 'Artiom' },
+        { summonerName: 'Anapielhion', name: 'GrosMast' },
+        { summonerName: 'COACH CHARISME', name: 'sekteur' },
+        { summonerName: 'BouffeurDePieds', name: 'keplos' },
+        { summonerName: 'KeriΛ λbuser', name: 'Smonmrt' },
       ];
       var apiKey = 'RGAPI-fb928930-a311-4832-89c3-6f1d339254e7'; // Remplacez par votre clé d'API Riot Games
 
