--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
     function getLeagueData() {
       var summonerData = [
         { summonerName: 'BzeurDeKrug', name: 'Mathieeeeuuuuuuu' },
-        { summonerName: 'AKOП', name: 'Artiom' },
+        { summonerName: 'AKOΠ', name: 'Artiom' },
         { summonerName: 'Anapielhion', name: 'GrosMast' },
         { summonerName: 'COACH CHARISME', name: 'sekteur' },
         { summonerName: 'BouffeurDePieds', name: 'keplos' },
         { summonerName: 'KeriΛ λbuser', name: 'Smonmrt' },
+        { summonerName: 'SekteurHantã', name: 'Tyssoxe' },
+        { summonerName: 'RaphtoNrv', name: 'Raphton' },
       ];
-      var apiKey = 'RGAPI-fb928930-a311-4832-89c3-6f1d339254e7'; // Remplacez par votre clé d'API Riot Games
+      var apiKey = 'RGAPI-c65d1b7a-85e0-4f4e-aeaf-82d115705646'; // Remplacez par votre clé d'API Riot Games
 
       var resultElement = document.getElementById('result');
       resultElement.innerHTML = ''; // Réinitialiser le contenu de la div résultat
